[package]
name = "smart-search-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.6.0", features = [
    "server",
    "transport-io",
    "transport-sse-server",
] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
reqwest = {version = "0.12.23", features = ["json", "multipart"]}
thiserror = "2.0.16"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter"
] }
clap = { version = "4.5.46", features = ["derive"] }
tokio-util = "0.7.16"
schemars = "1.0.4"
